Ny beskrivning till sjöbo marknad

--- a/index.html
+++ b/index.html
@@ -2111,33 +2111,50 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h2>Sjöbo Marknad</h2>
-                                            <p>Sjöbo sommarmarknad /Mikaeli marknad har ca 100 000/30 000 besökare varje år vilket gör det till en av Sveriges största marknader.</p>
+                                            <p>Välkommen till en av Sveriges största marknader.</p>
                                             <hr class="invis">
-                                            </p>600/200 knallar är representerade på marknaden, som ligger mitt i centrala Sjöbo.</p>
+                                            <p>Marknaden som arrangeras torsdag och fredag v29 varje år brukar besökas av ca 80000
+                                                personer som kan gå omkring bland upp till 600 knallar med allehanda försäljningssortiment.
+                                                Här finns allt från marknadskarameller, väskor och snidat hantverk till hängmattor, nyblivna
+                                                författare med sin första bok och allt däremellan!</p>
                                             <hr class="invis">
-                                            </p>Marknaden startades år 1864.</p>
+                                            <p>Vi har även tivoli på plats med karuseller som passar både våghalsar och mer försiktiga
+                                                åkare och givetvis mat från världens alla hörn!</p>
+                                        </div>
+                                    </div>
+                                    <hr class="invis">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <h2>Mikaeli marknad</h2>
+                                            <p>Välkommen till vår mysiga höstmarknad.</p>
                                             <hr class="invis">
-                                            <p>Vägbeskrivning:<br>
-                                                Från Malmö väg 11 mot Simrishamn.<br>
-                                                Från Simrishamn väg 11 mot Malmö.<br>
-                                                Från Ystad väg 13 mot Sjöbo.<br>
-                                                från Hörby väg 13 mot Sjöbo.</p>
+                                            <p>Mikaeli marknad arrangeras lördag och söndag v40 varje år och besöks av ca 8000 personer.</p>
+                                            <hr class="invis">
+                                            <p>På hösten erbjuder våra ca 200 knallar också på ett blandat sortiment med roligheter för hela
+                                                familjen och även om marknaden är mindre än på sommaren så har vi mat och tivoli precis
+                                                som det ska vara på en marknad!</p>
+                                        </div>
+                                    </div>
+                                    <hr class="invis">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <h3>Hitta hit</h3>
+                                            <p>Med placering lite mitt i Skåne så finns det bra bussförbindelser från de flesta håll till
+                                                Sjöbo och när du kliver av på busstationen är det bara till att följa strömmen en liten
+                                                promenad ner till marknadsplatsen.</p>
+                                            <hr class="invis">
+                                            <p>Kommer du med bil så följ hänvisningar till de olika parkeringarna som finns runt marknaden.</p>
                                         </div>
                                     </div>
                                     <hr class="invis">
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
-                                            <p>Sjöbo Kommun Marknad<br>
-                                                Box 54<br>
-                                                275 80 Sjöbo</p>
-                                            <hr class="invis">
-                                            <p>Renée Jönsson-Fiegen<br>
-                                                Malin Mandin<br>
-                                                0416-272 11<br>
+                                            <p>Sjöbo kommun<br>
+                                                Sjöbo marknad<br>
                                                 <a href="mailto:sjobomarknad@sjobo.se">sjobomarknad@sjobo.se</a><br>
-                                                <a href="mailto:renee.jonsson-fiegen@sjobo.se">renee.jonsson-fiegen@sjobo.se</a><br>
-                                                <a href="http://www.sjobo.se/marknader">www.sjobo.se/marknader</a>
+                                                0416-272 11<br>
+                                                Mail är absolut bästa sättet att komma i kontakt med oss då telefonen inte är bemannad varje vecka.
                                             </p>
                                         </div>
                                     </div>
