Ändrade kontaktuppgifter till borstahusen.

--- a/index.html
+++ b/index.html
@@ -1735,9 +1735,9 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <h3>Kontakt</h3>
-                                            <p>Anders Strand<br>
-                                                0702-38 78 06<br>
-                                                <a href="mailto:info@marknadsgeneralen.se">info@marknadsgeneralen.se</a><br>
+                                            <p>Mattias Nilsson<br>
+                                                073-0275617<br>
+                                                <a href="mailto:borstahusensbk@hotmail.com?subject=marknad 2026">borstahusensbk@hotmail.com</a> RUBRIK märker man med marknad 2026<br>
                                             </p>
                                         </div>
                                     </div>
